--- a/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
+++ b/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
@@ -26,11 +26,21 @@
                 </div>
               </div>
               <div fxLayout="row wrap" fxLayoutGap="20px" class="top-table p-8" style="margin-left: 25px;">
-                <div fxFlex="50" fxLayout="row" fxLayoutAlign="start center">
-                  <span>Pilih dari</span>
-                  <mat-checkbox class="mt-4 ml-4 mb-8" [formControl]="isB2CVoucher"
-                    (change)="onChangeIsB2CVoucher($event)">
-                    B2C Voucher</mat-checkbox>
+
+                <div fxFlex.xs="100" fxLayout.xs="column" fxLayoutAlign.xs="start" fxFlex="50" fxLayout="row wrap" fxLayoutAlign="start center">
+                  <div fxFlex="50" fxLayout="row" fxLayoutAlign="start center">
+                    <span>Pilih dari</span>
+                    <mat-checkbox class="mt-4 ml-4 mb-8" [formControl]="isB2CVoucher"
+                      (change)="onChangeIsB2CVoucher($event)">
+                      B2C Voucher</mat-checkbox>
+                  </div>
+                  <div fxFlex="50" fxLayout="row" fxLayoutAlign="start center">
+                    <mat-form-field fxFlex="100">
+                      <mat-select placeholder="Penggunaan Voucher" formControlName="opsiVoucher">
+                        <mat-option *ngFor="let ovl of opsiVoucherList" [value]="ovl.value">{{ ovl.name }}</mat-option>
+                      </mat-select>
+                    </mat-form-field>
+                  </div>
                 </div>
 
                 <mat-form-field fxFlex="50" class="is-light">
@@ -65,8 +75,8 @@
                   </mat-form-field>
                 </div>
 
-                <div fxFlex="50" fxLayout="row wrap" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
-                  <mat-form-field fxFlex="45%" class="is-light form-primary">
+                <div fxFlex.xs="100" fxLayout.xs="column" fxFlex="50" fxLayout="row" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+                  <mat-form-field fxFlex="50" class="is-light form-primary">
                     <input matInput (focus)="startPicker.open()" [matDatepicker]="startPicker"
                       placeholder="Tanggal Mulai" formControlName="startDate" [min]="minDateVoucher">
                     <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
@@ -77,7 +87,7 @@
                     </mat-error>
                   </mat-form-field>
 
-                  <mat-form-field fxFlex="45%" class="is-light form-primary">
+                  <mat-form-field fxFlex="50" class="is-light form-primary">
                     <input matInput (focus)="endDate.open()" [min]="minDateVoucher" [matDatepicker]="endDate"
                       placeholder="Tanggal Berakhir" formControlName="endDate">
                     <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
@@ -89,8 +99,8 @@
                   </mat-form-field>
                 </div>
 
-                <div fxFlex="50" fxLayout="row wrap" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
-                  <mat-form-field fxFlex="45%" class="is-light form-primary">
+                <div fxFlex.xs="100" fxLayout.xs="column" fxFlex="50" fxLayout="row" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+                  <mat-form-field fxFlex="50" class="is-light form-primary">
                     <input matInput (focus)="voucherPicker.open()" [matDatepicker]="voucherPicker"
                       placeholder="Tanggal Voucher Dibagikan" formControlName="voucherDate" [min]="minDateVoucher">
                     <mat-datepicker-toggle matSuffix [for]="voucherPicker"></mat-datepicker-toggle>
@@ -101,7 +111,7 @@
                     </mat-error>
                   </mat-form-field>
 
-                  <mat-form-field fxFlex="45%" class="is-light form-primary">
+                  <mat-form-field fxFlex="50" class="is-light form-primary">
                     <input matInput (focus)="voucherExpiry.open()" [min]="minDateVoucher"
                       [matDatepicker]="voucherExpiry" placeholder="Tanggal Kadaluarsa Voucher"
                       formControlName="voucherExpiry">
@@ -131,64 +141,98 @@
                     placeholder="Catatan"></textarea>
                 </mat-form-field>
 
-                <div fxFlex="50" fxLayout="row wrap" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
+                <div fxFlex="50">
                   <h4 style="font-weight: bold;">Batasan</h4>
-                  <div fxFlex="100">
-                    <mat-checkbox formControlName="limit_by_product" (change)="isChecked('product', $event)"
-                      style="margin-right: 25px;">Batasi dengan Produk
-                    </mat-checkbox>
-                    <mat-checkbox formControlName="limit_by_category" (change)="isChecked('category', $event)">Batasi
-                      Dengan Kategori</mat-checkbox>
-                  </div>
                 </div>
 
-                <mat-form-field fxFlex="50" class="pt-24" *ngIf="formDetilVoucher.get('limit_by_product').value">
-                  <mat-chip-list #chipList aria-label="Product List">
-                    <mat-chip *ngFor="let product of productList" [selectable]="selectable" [removable]="removable"
-                      (removed)="remove(product)">
-                      {{product.name}}
-                      <mat-icon matChipRemove *ngIf="removable" (click)="remove(product.sku_id)">cancel</mat-icon>
-                    </mat-chip>
-                    <input matInput type="text" #productInput placeholder="Batasan Berdasarkan Produk"
-                      (input)="keyUpProduct.next($event.target.value)" [formControl]="product" [matAutocomplete]="auto"
-                      [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                      (matChipInputTokenEnd)="add($event)">
-                  </mat-chip-list>
-                  <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayProductName" multiple>
-                    <mat-option *ngFor="let item of filteredSkuOptions | async" [value]="item"
-                      (onSelectionChange)="getProductObj($event, item)">
-                      {{item.name}}
-                    </mat-option>
-                  </mat-autocomplete>
-                </mat-form-field>
-                <mat-form-field fxFlex="50" class="pt-24" *ngIf="!formDetilVoucher.get('limit_by_product').value">
-                  <input matInput type="text" placeholder="Batasan Berdasarkan Produk" [disabled]="true">
-                </mat-form-field>
+                <div fxFlex="100" fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px">
+                  <div fxFlex="50" fxLayout="column" *ngIf="formDetilVoucher.get('opsiVoucher').value == 'b2b' || formDetilVoucher.get('opsiVoucher').value == 'both'">
+                    <div fxLayout="column" style="border: 1px solid #ddd; position: relative;" class="p-8">
+                      <span class="opsi-type">Produk B2B</span>
+                      <div fxFlex="100" fxLayout="row wrap" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
+                        <div fxFlex="100">
+                          <mat-checkbox formControlName="limit_by_product" (change)="isChecked('product', $event)"
+                            style="margin-right: 25px;">Batasi dengan Produk
+                          </mat-checkbox>
+                          <mat-checkbox formControlName="limit_by_category" (change)="isChecked('category', $event)">Batasi
+                            Dengan Kategori</mat-checkbox>
+                        </div>
+                      </div>
+                      <mat-form-field fxFlex="100" *ngIf="formDetilVoucher.get('limit_by_product').value" class="mt-8">
+                        <mat-chip-list #chipList aria-label="Product List">
+                          <mat-chip *ngFor="let product of productList" [selectable]="selectable" [removable]="removable"
+                            (removed)="remove(product)">
+                            {{product.name}}
+                            <mat-icon matChipRemove *ngIf="removable" (click)="remove(product.sku_id)">cancel</mat-icon>
+                          </mat-chip>
+                          <input matInput type="text" #productInput placeholder="Batasan Berdasarkan Produk"
+                            (input)="keyUpProduct.next($event.target.value)" [formControl]="product" [matAutocomplete]="auto"
+                            [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                            (matChipInputTokenEnd)="add($event)">
+                        </mat-chip-list>
+                        <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayProductName" multiple>
+                          <mat-option *ngFor="let item of filteredSkuOptions | async" [value]="item"
+                            (onSelectionChange)="getProductObj($event, item)">
+                            {{item.name}}
+                          </mat-option>
+                        </mat-autocomplete>
+                      </mat-form-field>
+                      <mat-form-field fxFlex="100" *ngIf="!formDetilVoucher.get('limit_by_product').value">
+                        <input matInput type="text" placeholder="Batasan Berdasarkan Produk" [disabled]="true">
+                      </mat-form-field>
 
-                <!-- fitur multiple category -->
-                <mat-form-field fxFlex="50">
-                  <mat-select placeholder="Batasan Berdasarkan Kategori" formControlName="category" multiple>
-                    <mat-option *ngFor="let cat of listCategories" [value]="cat.id">{{ cat.name }}</mat-option>
-                  </mat-select>
-                </mat-form-field>
+                      <mat-form-field fxFlex="100">
+                        <mat-select placeholder="Batasan Berdasarkan Kategori" formControlName="category" multiple>
+                          <mat-option *ngFor="let cat of listCategories" [value]="cat.id">{{ cat.name }}</mat-option>
+                        </mat-select>
+                      </mat-form-field>
+                    </div>
+                  </div>
+                  <div fxFlex="50" fxLayout="column" *ngIf="formDetilVoucher.get('opsiVoucher').value == 'src-catalogue' || formDetilVoucher.get('opsiVoucher').value == 'both'">
+                    <div fxLayout="column" style="border: 1px solid #ddd; position: relative;" class="p-8">
+                      <span class="opsi-type">SRC Katalog</span>
+                      <div fxFlex="100" fxLayout="row wrap" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
+                        <div fxFlex="100">
+                          <mat-checkbox formControlName="limit_by_product_srcc" (change)="isCheckedSRCC('product', $event)"
+                            style="margin-right: 25px;">Batasi dengan Produk
+                          </mat-checkbox>
+                          <mat-checkbox formControlName="limit_by_category_srcc" (change)="isCheckedSRCC('category', $event)">Batasi
+                            Dengan Kategori</mat-checkbox>
+                        </div>
+                      </div>
+                      <mat-form-field fxFlex="100" *ngIf="formDetilVoucher.get('limit_by_product_srcc').value" class="mt-8">
+                        <mat-chip-list #chipList aria-label="Product List">
+                          <mat-chip *ngFor="let product of productListSRCC" [selectable]="selectable" [removable]="removable"
+                            (removed)="removeSRCC(product)">
+                            {{product.name}}
+                            <mat-icon matChipRemove *ngIf="removable" (click)="removeSRCC(product.sku_id)">cancel</mat-icon>
+                          </mat-chip>
+                          <input matInput type="text" #productInputSRCC placeholder="Batasan Berdasarkan Produk"
+                            (input)="keyUpProductSRCC.next($event.target.value)" [formControl]="product_srcc" [matAutocomplete]="auto"
+                            [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                            (matChipInputTokenEnd)="addSRCC($event)">
+                        </mat-chip-list>
+                        <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayProductName" multiple>
+                          <mat-option *ngFor="let item of filteredSkuOptionsSRCC | async" [value]="item"
+                            (onSelectionChange)="getProductObjSRCC($event, item)">
+                            {{item.name}}
+                          </mat-option>
+                        </mat-autocomplete>
+                      </mat-form-field>
+                      <mat-form-field fxFlex="100" *ngIf="!formDetilVoucher.get('limit_by_product_srcc').value">
+                        <input matInput type="text" placeholder="Batasan Berdasarkan Produk" [disabled]="true">
+                      </mat-form-field>
+                      
+                      <mat-form-field fxFlex="100">
+                        <mat-select placeholder="Batasan Berdasarkan Kategori" formControlName="category_srcc" multiple>
+                          <mat-option *ngFor="let cat of listCategoriesSRCC" [value]="cat.id">{{ cat.name }}</mat-option>
+                        </mat-select>
+                      </mat-form-field>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <!-- <div fxLayout="row">
-                <div fxFlex="60"></div>
-                <div fxFlex="20">
-                  <div fxLayout="column" *ngIf="listStatuses.length > 0 && permission.b2b_approval">
-                    <button *ngFor="let item of listStatuses" mat-raised-button type="button"
-                      [ngClass]="item.value === 'rejected' ? 'confirmation-button' : 'mat-green-800-bg'" fxFlex="20"
-                      style="margin-bottom: 10px;" (click)="takeAction(item)">
-                      {{item.name ? item.name.toUpperCase() : item.name}}
-                    </button>
-                  </div>
-                  <div fxLayout="column" *ngIf="detailVoucher && detailVoucher.status === 'published'">
-                    <button mat-raised-button type="button" fxFlex="20" style="margin-bottom: 10px;" disabled>
-                      PUBLISHED
-                    </button>
-                  </div>
-                </div>
-              </div> -->
+              
               <div class="confirm p-24" fxLayout="row" fxLayoutAlign="start">
                 <button mat-raised-button type="button" class="confirmation-button" *ngIf="whyYouCantSeeMe()"
                   fxFlex="30" fxFlex.gt-xs="20" (click)="onSaveDetail()">
@@ -209,7 +253,7 @@
             </form>
           </div>
         </mat-tab>
-        <mat-tab label="Panel Mitra" *ngIf="isDetail">
+        <mat-tab label="Panel Mitra" *ngIf="isDetail && this.formDetilVoucher.get('opsiVoucher').value !== 'src-catalogue'">
           <app-panel-mitra-voucher (refreshDetail)="onRefreshDetail()" [statusVoucher]="detailVoucher.status"
             [permissions]="permission">
           </app-panel-mitra-voucher>
