--- a/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.scss
+++ b/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.scss
@@ -17,3 +17,12 @@
       }
     }
   }
+
+.opsi-type {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 3px 8px;
+  background-color: #eee;
+  font-weight: 600;
+}
