--- a/src/app/pages/dte/mission-builder/edit/dialog-misi-edit/dialog-misi-edit.component.html
+++ b/src/app/pages/dte/mission-builder/edit/dialog-misi-edit/dialog-misi-edit.component.html
@@ -71,7 +71,7 @@
   </mat-dialog-content>
   <br><br>
   <mat-dialog-actions>
-    <button mat-raised-button color="success" type="submit">Simpan</button>
+    <button mat-raised-button color="success" type="submit" [disabled]="isDetail">Simpan</button>
     <button mat-raised-button color="warn" type="button" (click)="dialogRef.close()">Batal</button>
   </mat-dialog-actions>
 
