--- a/src/app/pages/dte/mission-builder/edit/mission-builder-edit.component.html
+++ b/src/app/pages/dte/mission-builder/edit/mission-builder-edit.component.html
@@ -1,10 +1,6 @@
-<div
-  class="page-layout simple fullwidth"
-  fxLayout="column"
-  fusePerfectScrollbar
->
+<div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Edit Mission Builder'">
+  <page-content-header [contentTitle]="(isDetail ? 'Detil' : 'Edit') + ' Mission Builder'">
   </page-content-header>
   <!-- / HEADER -->
 
@@ -13,9 +9,10 @@
       <div fxLayout="row" fxLayoutAlign="space-between stretch" fxLayoutGap="16px" class="stats-cards content p-12">
         <div fxFlex="50">
           <mat-card style="padding: 0px; height:100%">
-            <div fxLayout="column" fxLayoutGap="8px" class="stats-cards content p-12" style="margin-left: 70px; margin-right: 70px;">
+            <div fxLayout="column" fxLayoutGap="8px" class="stats-cards content p-12"
+              style="margin-left: 70px; margin-right: 70px;">
               <div fxLayout="row" fxFlex="100">
-                <p fxFlex="30" class="paragraph">Nama  </p>
+                <p fxFlex="30" class="paragraph">Nama </p>
                 <p fxFlex="5" class="paragraph">:</p>
                 <p fxFlex="65" class="paragraph">{{task.name}}</p>
               </div>
@@ -34,7 +31,8 @@
         </div>
         <div fxFlex="50">
           <mat-card style="padding: 0px; height:100%">
-            <div fxLayout="column" fxLayoutGap="8px" class="stats-cards content p-12" style="margin-left: 100px; margin-right: 100px;">
+            <div fxLayout="column" fxLayoutGap="8px" class="stats-cards content p-12"
+              style="margin-left: 100px; margin-right: 100px;">
               <div fxLayout="row" fxFlex="100">
                 <p fxFlex="30" class="paragraph">Start Date </p>
                 <p fxFlex="5" class="paragraph">:</p>
@@ -52,51 +50,34 @@
 
       <mat-grid-list cols="2" rowHeight="45px">
         <mat-grid-tile>
-        <h2>Event :</h2>
+          <h2>Event :</h2>
         </mat-grid-tile>
 
         <mat-grid-tile>
-        <h2>Flow Control :</h2>
+          <h2>Flow Control :</h2>
         </mat-grid-tile>
       </mat-grid-list>
 
       <mat-grid-list cols="2" rowHeight="85px">
         <mat-grid-tile>
           <div class="button-row">
-            <button
-              mat-fab
-              class="mr-2"
-              color="primary"
-              matTooltip="Misi"
-              (click)="newDialog('mission')"
-              [disabled]="noMission"
-            >
+            <button mat-fab class="mr-2" color="primary" matTooltip="Misi" (click)="newDialog('mission')"
+              [disabled]="noMission">
               <mat-icon>assignment</mat-icon>
             </button>
 
-            <button
-              mat-fab
-              class="mr-2"
-              color="primary"
-              matTooltip="Push Notification"
-              (click)="newDialog('push-notification')"
-              [disabled]="noPush"
-            >
+            <button mat-fab class="mr-2" color="primary" matTooltip="Push Notification"
+              (click)="newDialog('push-notification')" [disabled]="noPush">
               <mat-icon>more_horiz</mat-icon>
             </button>
 
-            <button
-              mat-fab
-              class="mr-2"
-              color="primary"
-              matTooltip="Pop Up Notification"
-              (click)="newDialog('pop-up-notification')"
-              [disabled]="noPopup"
-            >
+            <button mat-fab class="mr-2" color="primary" matTooltip="Pop Up Notification"
+              (click)="newDialog('pop-up-notification')" [disabled]="noPopup">
               <mat-icon>notifications_active</mat-icon>
             </button>
 
-            <button mat-fab class="mr-2" color="primary" matTooltip="Coin" (click)="newDialog('coin')" [disabled]="noCoin">
+            <button mat-fab class="mr-2" color="primary" matTooltip="Coin" (click)="newDialog('coin')"
+              [disabled]="noCoin">
               <mat-icon>monetization_on</mat-icon>
             </button>
 
@@ -105,23 +86,18 @@
 
         <mat-grid-tile>
           <div class="button-row">
-            <button mat-fab class="mr-2" color="primary" matTooltip="Split Decision" (click)="newDialog('decision')" [disabled]="noDecision">
+            <button mat-fab class="mr-2" color="primary" matTooltip="Split Decision" (click)="newDialog('decision')"
+              [disabled]="noDecision">
               <mat-icon>help</mat-icon>
             </button>
 
-            <button mat-fab class="mr-2" color="primary" matTooltip="Waktu Tunggu" (click)="newDialog('time')" [disabled]="noTime"
-            >
+            <button mat-fab class="mr-2" color="primary" matTooltip="Waktu Tunggu" (click)="newDialog('time')"
+              [disabled]="noTime">
               <mat-icon>access_time</mat-icon>
             </button>
 
-            <button
-              mat-fab
-              class="mr-2"
-              color="primary"
-              matTooltip="End"
-              (click)="newDialog('finish')"
-              [disabled]="noFinish"
-            >
+            <button mat-fab class="mr-2" color="primary" matTooltip="End" (click)="newDialog('finish')"
+              [disabled]="noFinish">
               <mat-icon>login</mat-icon>
             </button>
 
@@ -131,19 +107,12 @@
       </mat-grid-list>
 
       <div fxLayout="row" fxLayoutAlign="space-around" *ngIf="task">
-        <ngx-graph class="chart-container"
-          [links]="hierarchialGraph.links"
-          [nodes]="hierarchialGraph.nodes"
-          [curve]="curve"
-          [nodeWidth]=150
-          [nodeHeight]=100
-          [enableZoom]="true"
-          [autoZoom]="true"
-          [update$]="update$"
-          [draggingEnabled]="task.is_editable === 1"
-          style="background-color: #eee; height: 600px;">
+        <ngx-graph class="chart-container" [links]="hierarchialGraph.links" [nodes]="hierarchialGraph.nodes"
+          [curve]="curve" [nodeWidth]=150 [nodeHeight]=100 [enableZoom]="true" [autoZoom]="true" [update$]="update$"
+          [draggingEnabled]="task.is_editable === 1" style="background-color: #eee; height: 600px;">
           <ng-template #defsTemplate>
-            <svg:marker id="arrow" viewBox="0 -5 10 10" refX="8" refY="0" markerWidth="4" markerHeight="4" orient="auto">
+            <svg:marker id="arrow" viewBox="0 -5 10 10" refX="8" refY="0" markerWidth="4" markerHeight="4"
+              orient="auto">
               <svg:path d="M0,-5L10,0L0,5" class="arrow-head" />
             </svg:marker>
           </ng-template>
@@ -151,22 +120,43 @@
           <ng-template #nodeTemplate let-node>
             <svg:g class="node" xmlns="http://www.w3.org/2000/xhtml" width="150" height="100">
               <svg:foreignObject width="150" height="100">
-                <xhtml:div class="cardContainer" xmlns="http://www.w3.org/1999/xhtml" [ngStyle]="getStyles(node)" (click)="cardClick(node)" (dblclick)="cardDoubleClick(node)">
-                  <button class="closeNode" (click)="delNode(node, $event);" *ngIf="task.is_editable === 1"><mat-icon style="font-size: 16px;">delete</mat-icon></button>
-                  <label class="activeNode" *ngIf="currentNode === node.data.component_id"><mat-icon style="font-size: 16px;">check</mat-icon></label>
-                  <label *ngIf="node.data.type === 'mission'"><mat-icon>assignment</mat-icon></label>
-                  <label *ngIf="node.data.type === 'pop-up-notification'"><mat-icon>notifications_active</mat-icon></label>
-                  <label *ngIf="node.data.type === 'coin'"><mat-icon>monetization_on</mat-icon></label>
-                  <label *ngIf="node.data.type === 'decision'"><mat-icon>help</mat-icon></label>
-                  <label *ngIf="node.data.type === 'finish'"><mat-icon>login</mat-icon></label>
-                  <label *ngIf="node.data.type === 'time'"><mat-icon>access_time</mat-icon></label>
-                  <label *ngIf="node.data.type === 'push-notification'"><mat-icon>more_horiz</mat-icon></label>
-                  <br/>
+                <xhtml:div class="cardContainer" xmlns="http://www.w3.org/1999/xhtml" [ngStyle]="getStyles(node)"
+                  (click)="cardClick(node)" (dblclick)="cardDoubleClick(node)">
+                  <button class="closeNode" (click)="delNode(node, $event);" *ngIf="task.is_editable === 1">
+                    <mat-icon style="font-size: 16px;">delete</mat-icon>
+                  </button>
+                  <label class="activeNode" *ngIf="currentNode === node.data.component_id">
+                    <mat-icon style="font-size: 16px;">check</mat-icon>
+                  </label>
+                  <label *ngIf="node.data.type === 'mission'">
+                    <mat-icon>assignment</mat-icon>
+                  </label>
+                  <label *ngIf="node.data.type === 'pop-up-notification'">
+                    <mat-icon>notifications_active</mat-icon>
+                  </label>
+                  <label *ngIf="node.data.type === 'coin'">
+                    <mat-icon>monetization_on</mat-icon>
+                  </label>
+                  <label *ngIf="node.data.type === 'decision'">
+                    <mat-icon>help</mat-icon>
+                  </label>
+                  <label *ngIf="node.data.type === 'finish'">
+                    <mat-icon>login</mat-icon>
+                  </label>
+                  <label *ngIf="node.data.type === 'time'">
+                    <mat-icon>access_time</mat-icon>
+                  </label>
+                  <label *ngIf="node.data.type === 'push-notification'">
+                    <mat-icon>more_horiz</mat-icon>
+                  </label>
+                  <br />
                   <label class="name">{{node.label}}</label>
-                  <br/>
+                  <br />
                   <div *ngIf="node.data.type === 'decision'" fxLayoutAlign="space-between" class="yesNo">
-                    <button (click)="setYesNo(node, 'yes')"><span [ngStyle]="{'font-size': '12px', 'text-decoration': yesNo === 'yes' ? 'underline' : 'none'}">Yes</span></button>
-                    <button (click)="setYesNo(node, 'no')"><span [ngStyle]="{'font-size': '12px', 'text-decoration': yesNo === 'no' ? 'underline' : 'none'}">No</span></button>
+                    <button (click)="setYesNo(node, 'yes')"><span
+                        [ngStyle]="{'font-size': '12px', 'text-decoration': yesNo === 'yes' ? 'underline' : 'none'}">Yes</span></button>
+                    <button (click)="setYesNo(node, 'no')"><span
+                        [ngStyle]="{'font-size': '12px', 'text-decoration': yesNo === 'no' ? 'underline' : 'none'}">No</span></button>
                   </div>
                 </xhtml:div>
               </svg:foreignObject>
@@ -178,21 +168,23 @@
               <svg:path class="line" stroke-width="2" marker-end="url(#arrow)">
               </svg:path>
               <svg:text class="edge-label" text-anchor="middle">
-                <textPath class="text-path" [attr.href]="'#' + link.id" [style.dominant-baseline]="link.dominantBaseline" startOffset="50%">{{link.label}}</textPath>
+                <textPath class="text-path" [attr.href]="'#' + link.id"
+                  [style.dominant-baseline]="link.dominantBaseline" startOffset="50%">{{link.label}}</textPath>
               </svg:text>
             </svg:g>
             <svg:g class="linkMidpoint" *ngIf="link.midPoint"
-                   [attr.transform]="'translate(' + (link.midPoint.x) + ',' + (link.midPoint.y) + ')'">
+              [attr.transform]="'translate(' + (link.midPoint.x) + ',' + (link.midPoint.y) + ')'">
               <ellipse rx="30" ry="10" style="fill: #eee; stroke: #000;" *ngIf="link.label" />
               <svg:text alignment-baseline="central">{{ link.label }}</svg:text>
-          </svg:g>
+            </svg:g>
           </ng-template>
         </ngx-graph>
       </div>
       <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="16px" class="stats-cards content p-12">
         <div fxFlex="39">
           <mat-card style="padding: 0px;">
-            <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="16px" class="stats-cards content p-12">
+            <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="16px"
+              class="stats-cards content p-12">
               <div fxFlex="60" class="h2" style="margin-right: 0px; text-align: right;">Total Budget Used : </div>
               <div fxFlex="40" class="h2">IDR {{task.total_budget}}</div>
             </div>
@@ -200,17 +192,22 @@
         </div>
         <div fxFlex="39">
           <mat-card style="padding: 0px;">
-            <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="16px" class="stats-cards content p-12">
+            <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="16px"
+              class="stats-cards content p-12">
               <div fxFlex="60" class="h2" style="margin-right: 0px; text-align: right;">Total Week Duration : </div>
               <div fxFlex="40" class="h2">{{task.current_week}}/{{task.total_week}}</div>
             </div>
           </mat-card>
         </div>
         <div fxFlex="12">
-          <button mat-raised-button type="button" style="width:100%; background-color:#007EE5" [disabled]="task?.is_editable === 0" class="confirmation-button" (click)="submit('unpublish')">Save As Draft</button>
+          <button mat-raised-button type="button" style="width:100%; background-color:#007EE5"
+            [disabled]="task?.is_editable === 0" class="confirmation-button" (click)="submit('unpublish')"
+            *ngIf="!isDetail">Save As
+            Draft</button>
         </div>
         <div fxFlex="10">
-          <button mat-raised-button type="button" style="width:100%;" class="confirmation-button" (click)="updateStatus()">{{task.status === 'publish' ? 'Unpublish' : 'Publish'}}</button>
+          <button mat-raised-button type="button" style="width:100%;" class="confirmation-button"
+            (click)="updateStatus()" *ngIf="!isDetail">{{task.status === 'publish' ? 'Unpublish' : 'Publish'}}</button>
         </div>
         <!-- <div fxFlex="10" *ngIf="task.status === 'unpublish'">
           <button mat-raised-button type="button" style="width:100%" class="confirmation-button" (click)="updateStatus()">Publish</button>
