--- a/src/app/pages/remote-call-activation/grouping-pelanggan/index/grouping-pelanggan-index.component.html
+++ b/src/app/pages/remote-call-activation/grouping-pelanggan/index/grouping-pelanggan-index.component.html
@@ -112,6 +112,8 @@
                     <!-- <mat-option *ngIf="cities.length > 0"
                       [value]="{value: formFilter.get('territoryCode').value, key: 'territoryCode'}">Semua Kota
                     </mat-option> -->
+                    <mat-option *ngIf="cities.length === 0">No City Available</mat-option>
+                    <mat-option *ngIf="cities.length > 0">None</mat-option>
                     <mat-option *ngFor="let item of cities" [value]="item.city">{{item.city}}</mat-option>
                   </mat-select>
                 </mat-form-field>
@@ -121,6 +123,8 @@
                       [value]="{value: formFilter.get('city').value, key: 'city'}">
                       Semua District
                     </mat-option> -->
+                    <mat-option *ngIf="districts.length === 0">No District Available</mat-option>
+                    <mat-option *ngIf="districts.length > 0">None</mat-option>
                     <mat-option *ngFor="let item of districts" [value]="item.district">{{item.district }}</mat-option>
                   </mat-select>
                 </mat-form-field>
@@ -129,6 +133,8 @@
                     <!-- <mat-option *ngIf="districts.length > 0"
                       [value]="{value: formFilter.get('district').value, key: 'district'}">Semua Village
                     </mat-option> -->
+                    <mat-option *ngIf="villages.length === 0">No Village Available</mat-option>
+                    <mat-option *ngIf="villages.length > 0">None</mat-option>
                     <mat-option *ngFor="let item of villages" [value]="item.village">{{item.village
                       }}</mat-option>
                   </mat-select>
